# free

./: .gitignore  h2.py  h2_pointcloud.spec  h2_resolution_gui_test.spec  pyproject.toml
R2/: R200解析数据.py  __init__.py  r2_client.py  r2_resolution_gui_test.py
c2_h1/: C225指令测试.py  H1时间戳测试通用版本.py  readme.md  sdk点云异常_52003.py  升降级压力测试-taylor.py  盲区测试高分辨率桌面版本.py  高分辨率盲区测试-C2H1如30HZ 0.1.py
c2_h1/压力测试/: C200压力测试(连续取数+通断网).py  (+2 more)
c3/: C2-包内时间戳每圈时间间隔检查 - old.py  C3压力测试_50000_52000.py  M盲区测试C3.py  batch_export_90deg_png.py  c3_continuous_pointcloud_per_scan.py  h2_pointcloud.spec  long_text_FE127AE5-97F8-454C-8A93-1FE396BCAEF6.py  long_text_H2_pointcloud_gui.py  long_text_H2_pointcloud_gui.spec  radar_h1_c2_c3_timestamp_unified.py
network_test/: C2H1网络通信测试方案-表格整理.md  C2H1网络通信测试方案_整理版.md  __init__.py  pyinstaller_entry.py  pytest.ini  单线激光雷达（C2H1）网络通信测试方案.docx  单线激光雷达（C2H1）网络通信测试方案.md  单线激光雷达（C2H1）网络通信测试方案_原文提取.txt
码盘补偿/: a1470ba6923e4dcf97d35b1f0c803829_md_full.md  analyze_h2_export_delta_median_plot.py  angle_resolution_test_app.py  build_exe_uv.ps1  build_newpre_exe_uv.ps1  build_r2_resolution_gui_exe.ps1  example_call_y100sc.py  example_call_y100sc.spec  h1_radar_reader.py  h2_radar_client.py  h2_resolution_gui.spec  h2_resolution_gui_test.py  h2_resolution_gui_test.spec  h2_single_scan_pointcount.py  newpre.md  newpre_resolution_cli_test.py  newpre_resolution_gui.spec  newpre_resolution_gui_test.py  pre.md  pyproject.toml  r2_radar_client.py  r2_resolution_gui_test.py  r2_resolution_gui_test.spec  y100sc_client.py  实时获取最新点云.md
码盘补偿/ui/: angle_resolution_main.ui
(+52 files in other folders)
